# my-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_task3.py  final_push_log_2.txt  fix_prints.py  fix_prints_2.py  hf_push_log.txt  inference.py  openenv.yaml  plan.md  push_error.txt  push_error_final.txt  pyproject.toml  requirements.txt  test.py  test_grader.py  test_seeds.py
dataset/: .gitkeep
email_env/: Dockerfile  README.md  inference.py  openenv.yaml  test_imap.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
server/: agent.py  app.py  environment.py  models.py  registry.py
src/: __init__.py  app.py  classifier.py  environment.py  imap_client.py  models.py  train_rl.py
