[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inboxiq"
version = "3.0"
description = "InboxIQ — OpenEnv-compliant RL environment for intelligent email inbox triage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "numpy",
    "openai",
    "python-dotenv",
    "openenv>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Viswanath129/my-openenv"

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["dataset*", "frontend*", "tests*"]
